# yolo-nebulizer-system

./: .gitignore  Print_Test.py  README.md  YOLO与雾化器联动系统实现方案.md  image-printer.py  requirements.txt  usb.sh  yolo.sh  yolo_nebulizer.py  雾化器控制系统实现方案.md
Printer/: 1.md  2.md  3.md  4.md  5.md  Print_Test0.py
X4/: GPIO定义.md  MicroPython.md  X4硬件.txt  在 Linux 下控制 RP2040.md  烧录程序到 RP2040.md
nebulizer_control/: CMakeLists.txt  nebulizer_firmware.c
